# py3-grpc-cookie

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  Dockerfile  Makefile  README.md  alembic.ini  conftest.py  pyproject.toml
{{cookiecutter.project_slug}}/config/: .env  .secrets.toml  settings.py  settings.toml
{{cookiecutter.project_slug}}/proto/: Makefile  pyproject.toml
{{cookiecutter.project_slug}}/proto/{{cookiecutter.protobuf_namespace}}/proto/{{cookiecutter.project_slug}}/v1/: helloworld.proto
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/py/models/: __init__.py  meta.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/py/services/: helloworld.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/app/py/services/tests/: test_helloworld.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cli/: exc.py  main.py  version.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cli/controllers/: base.py  client.py  server.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/proto/v1/: helloworld.proto
