[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name}} <{{ cookiecutter.email }}>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
cement = "^3.0"
dynaconf = "^2.1"
jinja2 = "^2.10"
sqlalchemy = "^1.3"
alembic = "^1.2"
grpcio = "^1.24"
googleapis-common-protos = "^1.6"
protobuf = "^3.10"
arrow = "^0.15.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pre-commit = "^1.18"
pylint = "^2.4"
isort = "^4.3"
pytest-cov = "^2.8"
grpcio-testing = "^1.24"
pytest-mock = "^1.11"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli.main:main"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
