[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = [
    "{{ cookiecutter.full_name}} <{{ cookiecutter.email }}>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
cement = "^3.0"
dynaconf = "^2.1"
sqlalchemy = "^1.3"
alembic = "^1.2"
grpcio = "^1.24"
protobuf = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-mock = "^1.11"
pytest-cov = "^2.8"
pylint = "^2.4"
isort = "^4.3"
grpcio-testing = "^1.24"
grpcio-tools = "^1.27.1"
mypy-protobuf = "^1.17"
{% if cookiecutter.install_precommit_hooks == "y" %}
pre-commit = "^1.18"
{% endif %}

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.cli.main:main"

[tool.black]
line-length = 80

[tool.isort]
line_length = 80
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
