[tool.poetry]
name = "{{ cookiecutter.project_slug }}-proto"
version = "0.1.0"
description = "{{ cookiecutter.project_name }} protobuf"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>",]

packages = [
    { include = "{{ cookiecutter.protobuf_namespace }}" },
]
# Explicitly include the generated python files to override Poetry's default
# behavior of excluding .gitignore files.
include = ["*/**/*.py"]
exclude = ["*/**/*.proto"]

[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.dev-dependencies]
grpcio-tools = "^1.24"
mypy-protobuf = "^1.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
